--- a/src/modules/ui/controls/download/download.scss
+++ b/src/modules/ui/controls/download/download.scss
@@ -17,7 +17,7 @@
 
   transition: transform .2s;
 
-  @include in-full-screen() {
+  @include query(in-full-screen()) {
     width: 35px;
     min-width: 35px;
     height: 35px;
