--- a/src/modules/ui/controls/full-screen/full-screen.scss
+++ b/src/modules/ui/controls/full-screen/full-screen.scss
@@ -9,7 +9,6 @@
   justify-content: center;
 }
 
-
 .fullScreenToggle {
   width: 26px;
   min-width: 26px;
@@ -18,7 +17,7 @@
 
   transition: transform .2s;
 
-  @include in-full-screen() {
+  @include query(in-full-screen()) {
     width: 17px;
     height: 35px;
 
