--- a/src/modules/ui/live-indicator/live-indicator.scss
+++ b/src/modules/ui/live-indicator/live-indicator.scss
@@ -12,32 +12,48 @@ $inactive-color: #959595;
   background-color: $inactive-color;
   // position styles start
 
-  @include ltr() {
+  @include query(ltr()) {
     margin-right: 15px;
+
+    direction: ltr;
   }
-  @include rtl() {
+  @include query(rtl()) {
     margin-left: 15px;
+
+    direction: rtl;
   }
-  @include in-full-screen(ltr) {
+  @include query(in-full-screen(), ltr()) {
     margin-right: 20px;
+
+    direction: ltr;
   }
-  @include in-full-screen(rtl) {
+  @include query(in-full-screen(), rtl()) {
     margin-left: 20px;
+
+    direction: rtl;
   }
-  @include max-width-550(ltr) {
+  @include query(max-width-550(), ltr()) {
     margin-right: 10px;
+
+    direction: ltr;
   }
-  @include max-width-550(rtl) {
+  @include query(max-width-550(), rtl()) {
     margin-left: 10px;
+
+    direction: rtl;
   }
-  @include max-width-280() {
+  @include query(max-width-280()) {
     padding: 2px 3px;
   }
-  @include max-width-280(ltr) {
+  @include query(max-width-280(), ltr()) {
     margin-right: 10px;
+
+    direction: ltr;
   }
-  @include max-width-280(rtl) {
+  @include query(max-width-280(), rtl()) {
     margin-left: 10px;
+
+    direction: rtl;
   }
 
   &.ended {
@@ -61,7 +77,7 @@ button.liveIndicatorButton {
   padding: 5px 6px;
 
   user-select: none;
-  text-transform: uppercase!important;
+  text-transform: uppercase !important;
 
   color: #fff;
   border: 0;
@@ -69,7 +85,7 @@ button.liveIndicatorButton {
   outline: none;
   background-color: transparent;
 
-  @include max-width-280() {
+  @include query(max-width-280()) {
     font-size: 10px;
     line-height: 12px;
   }
