fix(ui/icons): tune icons sizes and focus area

--- a/src/modules/ui/controls/download/download.scss
+++ b/src/modules/ui/controls/download/download.scss
@@ -24,14 +24,16 @@
     min-height: 21px;
 
     .icon {
-      width: 24px;
-      height: 21px;
+      width: 18px;
+      height: 18px;
+      padding-right: 2px;
     }
   }
 
   .icon {
-    width: 17px;
-    height: 15px;
+    width: 14px;
+    height: 14px;
+    padding-bottom: 2px;
   }
 
   &:hover {
