--- a/src/modules/ui/controls/volume/volume.scss
+++ b/src/modules/ui/controls/volume/volume.scss
@@ -48,12 +48,14 @@ $color: white !default;
     .icon {
       width: 25px;
       height: 21px;
+      padding-left: 4px;
     }
   }
 
   .icon {
-    width: 17px;
+    width: 19px;
     height: 14px;
+    padding-left: 5px;
   }
 }
 
