--- a/src/modules/ui/controls/play/play.scss
+++ b/src/modules/ui/controls/play/play.scss
@@ -32,6 +32,24 @@
     }
   }
 
+  .playIcon {
+    display: none;
+  }
+
+  .pauseIcon {
+    display: block;
+  }
+
+  &.paused {
+    .playIcon {
+      display: block;
+    }
+
+    .pauseIcon {
+      display: none;
+    }
+  }
+
   .icon_small {
     display: block;
   }
